math-core/tests/snapshots/conversion_test__square_root_with_space.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sqrt 12"
---
<math>
    <msqrt>
        <mn>1</mn>
    </msqrt>
    <mn>2</mn>
</math>
