math-core/tests/snapshots/conversion_test__standalone_superscript.snap
---
source: math-core/tests/conversion_test.rs
expression: ^2F_3
---
<math>
    <msub>
        <mmultiscripts>
            <mi>F</mi>
            <mprescripts/>
            <mrow></mrow>
            <mn>2</mn>
        </mmultiscripts>
        <mn>3</mn>
    </msub>
</math>
