math-core/tests/snapshots/conversion_test__standalone_underscore.snap
---
source: math-core/tests/conversion_test.rs
expression: _2F_3
---
<math>
    <msub>
        <mmultiscripts>
            <mi>F</mi>
            <mprescripts/>
            <mn>2</mn>
            <mrow></mrow>
        </mmultiscripts>
        <mn>3</mn>
    </msub>
</math>
