math-core/tests/snapshots/conversion_test__stretchy_parentheses.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\left( x \\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo>)</mo>
    </mrow>
</math>
