math-core/tests/snapshots/conversion_test__sub_superscript.snap
---
source: math-core/tests/conversion_test.rs
expression: x^2_3
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
